[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1.1.1"
schemars = { version = "0.8.12", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
message-io = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18.0"
futures-util = "0.3.27"
