[package]
name = "derails_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1.1.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
message-io = "0.15"
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls", "sqlite" ] }
mlua = { version = "0.8.8", features = [ "lua54", "vendored", "async"] }
toml = "0.7.3"
clap = { version = "4.2.2", features = ["derive"] }
protobuf-parse = "3.2.0"
